Thu Jun 12 14:09:34 2003  George Lebl <jirka@5z.com>

	* configure.in, src/Makefile.am, genius.lang, src/gnome-genius.c: add
	  optional GtkSourceView support and add highlighting with that.
	  I should figure out the mime type mess and install all this stuff
	  so that even gedit can get highlighting for gel files.

Wed Jun 11 11:27:18 2003  George Lebl <jirka@5z.com>

	* src/genius-readline-helper.c, src/inter.c: change directory in the
	  readline helper, and update the helper completion routine to match
	  inter.c

Fri Jun 06 16:25:15 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: the preference dialog has hig ordered buttons
	  and all the other dialogs also now lack the separator thingie.

Mon Jun 02 13:32:12 2003  George Lebl <jirka@5z.com>

	* Release 0.5.5 

	* src/gnome-genius.c: when we go to the last error there was an
	  "off by one" error

Mon Jun 02 13:18:53 2003  George Lebl <jirka@5z.com>

	* src/geniustests.txt: add test for sqrt with mod

	* src/gnome-genius.c: print line number in the statusbar, and on
	  error place the cursor at the point of the last error (kind of
	  a hack, should somehow mark all errors)

Mon Jun 02 10:13:13 2003  George Lebl <jirka@5z.com>

	* src/eval.c: fix resetting the modulo after recursive eval call
	  (was a crash)

	* src/funclib.c, src/calc.[ch]: a lot of messages are now unified
	  for ease of translation and argument checking is done with
	  helper routines.  Also when the sqrt is called with mod try calling
	  the SqrtModPrime or erroring out.

Sun Jun 01 09:14:06 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/modulus.gel: add
	  SilverPohligHellmanWithFactorization function which does the
	  discrete log but knowing the factorization of q-1, so if you do
	  a bunch of discrete logs this can be a lot faster.

Sat May 31 15:11:04 2003  George Lebl <jirka@5z.com>

	* lib/numbertheory/modulus.gel: add IsPrimitiveModWithPrimeFactors,
	  which is like IsPrimitiveMod, but we already put in the