@@ -1,3 +1,7 @@
+Thu Jun 12 14:17:01 2003  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: load programs from command line
+
 Thu Jun 12 14:09:34 2003  George Lebl <jirka@5z.com>
 
 	* configure.in, src/Makefile.am, genius.lang, src/gnome-genius.c: add
